fix: Fixed too many addons overflowing the screen, b=closes #10918, c=common

--- a/src/zen/common/styles/zen-single-components.css
+++ b/src/zen/common/styles/zen-single-components.css
@@ -302,6 +302,12 @@ body > #confetti {
   gap: 8px;
   overflow: visible;
 
+  &[overflowing='true'] {
+    overflow-x: auto;
+    max-height: 420px;
+    mask-image: linear-gradient(to top, transparent, black 5%);
+  }
+
   .unified-extensions-item-name,
   .unified-extensions-item-message,
   .unified-extensions-item-message-hover,
